# igcse-a-level-revision-guide

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: provider_request.md
.github/workflows/: ci.yml
docs/: ACCURACY_POLICY.md  DELIVERY_QUALITY_REBUILD_PLAN.md  EXAMPLES.md  HANDOFF.md  IMAGE_MODEL_GUIDE.md  MULTI_AGENT_ORCHESTRATION.md  PROJECT_DETAILS.md  PROJECT_OPERATIONS.md  README_RESEARCH.md  RELEASE_CHECKLIST.md  SKILL_EXPLAINED.md  index.html  project-intro-animation-en.html  project-intro-animation.html
docs/assets/three-board-support-video/: index.html  video.jsx
docs/assets/three-board-support-video-en/: index.html  video.jsx
docs/release-evidence/: README.md
docs/release-evidence/v0.4/: aqa-as-sample-audit.md  manifest.json  real-sample-audit.md
docs/release-evidence/v0.4.1/: manifest.json
scripts/: capture_release_assets.py  finalize_release_samples.py  generate_pending_infographics_router.py  import_concept_explanations.py  import_infographic_assets.py  render_intro_animation.py  scan_for_raw_keys.py  verify_release_samples.py  write_concept_explanations_from_jobs.py
skill/: SKILL.md  test-prompts.json
skill/agents/: openai.yaml
skill/references/: oxfordaqa.md  revision_guide_spec.md
src/intl_exam_guide/: __init__.py  cli.py  models.py
src/intl_exam_guide/agents/: __init__.py  orchestration.py
src/intl_exam_guide/auditing/: __init__.py  concept_jobs.py  content_quality.py  delivery_matrix.py  final_review.py  visual_jobs.py
src/intl_exam_guide/core/: __init__.py  contracts.py
src/intl_exam_guide/planning/: anti_ai_language.py  checklists.py  explanation_styles.py  guide_plan.py  language_policy.py  localization.py  practice_business_examples.py  practice_economics_examples.py  practice_focus.py  practice_generator.py  practice_history_examples.py  practice_math_examples.py  source_points.py  subject_profiles.py  visual_routing.py
src/intl_exam_guide/providers/: __init__.py  base.py  common.py  oxfordaqa.py  pearson.py
tests/: test_anti_ai_language.py  test_architecture_guards.py  test_concept_jobs.py  test_content_quality.py  test_core_contracts.py  test_delivery_matrix.py  test_delivery_status.py  test_demo_cli.py  test_explanation_styles.py  test_final_review_packet.py  test_guide_plan_units.py  test_import_concept_full_body.py  test_infographics.py  test_kroki_renderer.py  test_localization.py  test_main_module.py  test_models_multi_provider.py  test_pdf_export.py  test_pdf_text.py  test_practice_generator.py  test_provider_parser.py  test_release_scripts.py  test_rendering_contracts.py  test_rendering_text.py  test_scope_exclusion.py  test_story_modes.py  test_subject_packs.py  test_subject_profiles.py  test_svg_templates.py  test_url_first_providers.py  test_validation_checks.py  test_visual_jobs.py  test_visual_manifest_v2.py  test_visual_routing.py  test_visual_routing_benchmark.py  test_visual_spec.py  test_write_concept_explanations_from_jobs.py
tests/fixtures/: delivery_matrix.json
(+19 files in other folders)
