[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "igcse-a-level-revision-guide"
version = "0.4.1"
description = "Generate image-rich IGCSE and A-Level revision guides with worked examples, infographics, and PDF output."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ethan" }]
dependencies = [
  "pypdf>=4.0",
]

[project.optional-dependencies]
pdf = ["playwright>=1.45"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
intl-exam-guide = "intl_exam_guide.cli:main"
igcse-a-level-guide = "intl_exam_guide.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
intl_exam_guide = ["assets/*.json"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
files = ["src/intl_exam_guide"]
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true

[tool.coverage.run]
branch = true
source = ["intl_exam_guide"]

[tool.coverage.report]
show_missing = true
skip_covered = true
